--- a/interoperability.tex
+++ b/interoperability.tex
@@ -1,12 +1,92 @@
 \chapter{Διασυνδεσιμότητα}\label{ch:Interoperability}
 \section{Απαιτήσεις}
+
 \section{Πρωτόκολλα επικοινωνίας}
-	\subsection{CDA Documents}
 	\subsection{HL7 messaging v2 και v3}
+
+	\subsection{CDA Documents}
+	
+
 		
 \section{Δυνατότητες διασύνδεσης με άλλα υποσυστήματα}
 	\subsection{Ηλεκτρονική Συνταγογράφηση}
+	
+		Η διαδικασία της συνταγογράφησης φαρμάκων μπορεί να είναι ιδιαίτερα περίπλοκη και επιρρεπής σε λάθη, με
+δυσμενείς επιπτώσεις για την ασφάλεια των ασθενών. Η πρόληψη των επιπλοκών που μπορούν να προκύψουν λόγω ακατάλληλης συνταγογράφησης είναι μία πρόκληση που αντιμετωπίζει το σύστημα υγείας σε παγκόσμιο επίπεδο. Οι λανθασμένες φαρμακευτικές αγωγές, οι παρενέργειες των φαρμάκων και η αποτυχία σωστής συνταγογράφησης που να συντελέσει στην θεραπεία του ασθενούς εκτός του γεγονότος ότι αποτελεί απειλή για την ασφάλεια του, οδηγεί σε σημαντικές δαπάνες για τα συστήματα υγειονομική περίθαλψης. Οι πληροφορίες σχετικά με το ιστορικό του ασθενούς, τις αλλεργίες, τις παρελθοντικές και τις τρέχουσες φαρμακευτικές αγωγές καθώς και τα εργαστηριακά αποτελέσματα του είναι άκρως απαραίτητα ώστε οι κλινικοί ιατροί να συνταγογραφήσουν την κατάλληλη φαρμακευτική αγωγή, αλλά είναι συχνά δεν είναι διαθέσιμα. \cite{prescribingErrors} Στην Ελλάδα ειδικότερα, υφίσταται το πρόβλημα της αλόγιστης ή πλασματικής συνταγογράφησης με αποτέλεσμα να  χρειάζονται μέτρα για την επαναφορά της αξιοπιστίας της διαδικασίας.  Χαρακτηριστικό παράδειγμα είναι τα στοιχεία του Υπουργείου Υγείας και Κοινωνικής Ασφάλισης, με βάση τα οποία το έτος 2009 εκτελεστήκαν στην Ελλάδα περίπου 100 εκατομμύρια ετησίως ενώ αντίστοιχα στην Δανία εκτελέστηκαν μόνο 15 εκατομμύρια συνταγές.
+
+
+		Με τον όρο ηλεκτρονική συνταγογράφηση (e-prescription) σύμφωνα με το Εθνικό Σύστημα Υγείας στην Αγγλία αναφερόμαστε στην αξιοποίηση των ηλεκτρονικών συστημάτων για την διευκόλυνση και την ενίσχυσης της επικοινωνίας μίας ιατρικής εντολής ή συνταγής, βοηθώντας στην επιλογή, τη διαχείριση και την προμήθεια ενός φαρμάκου μέσω της γνώσης και υποστήριξης αποφάσεων, παρέχοντας μια διαδρομή ελέγχου για το σύνολο της διαδικασίας χρήσης των φαρμάκων.  Τα συστήματα ηλεκτρονικής συνταγογράφησης που προσφέρουν ηλεκτρονική υποστήριξη στους κλινικούς ιατρούς έχουν σχεδιαστεί για να βοηθήσουν στην περίπλοκη διαδικασία της συνταγογράφησης. \cite{Kierkegaard2013} Επιτρέπουν σε έναν γιατρό, έναν φαρμακοποιό, μία νοσηλεύτρια να διαβιβάσει χωρίς σφάλματα, ακριβείς και κατανοητές συνταγές ηλεκτρονικά, μέσα από τον φορέα παροχής υπηρεσιών υγείας, στο φαρμακείο.  \cite{eprescr}
+		
+		
+		Τα συστήματα ηλεκτρονικής συνταγογράφησης μπορεί να έχουν λειτουργικές δυνατότητες για την παροχή βασικής υποστήριξης αποφάσεων, όπως ο έλεγχος για τυχόν αλλεργίες στα φάρμακα, βασικές κατευθυντήριες γραμμές για τη δοσολογία, τεστ για πιθανές αντιδράσεις μεταξύ φαρμάκων κ.λ.π. Τα συστήματα αυτά είναι ιδιαίτερα χρήσιμα στο τεχνικό κομμάτι της συνταγογράφησης κατάλληλων φαρμάκων, καθώς προσφέρουν λειτουργίες όπως ο υπολογισμός της σωστής δόσης ή ο εντοπισμός αλληλεπιδράσεων μεταξύ των φαρμάκων. \cite{Kart2008}
+
+		Τα συστήματα ηλεκτρονικής συνταγογράφησης χωρίζονται σε δύο κατηγορίες:
+		
+		\begin{itemize}
+		
+		\item Τα αυτόνομα συστήματα (stand alone systems). Πρόκειται για λειτουργικά συστήματα τα οποία είναι εγκατεστημένα στους ηλεκτρονικούς υπολογιστές  και χρησιμοποιούνται είτε αυτόνομα είτε μέσω σύνδεσης στο διαδίκτυο.  Τα συστήματα αυτά χρησιμοποιούνται κυρίως για τον έλεγχο θεμάτων ασφάλειας και γίνεται προσπάθεια αντικατάστασης τους από τα ολοκληρωμένα συστήματα συνταγογράφησης.
+
+		\item Τα ολοκληρωμένα συστήματα συνταγογράφησης (Electronic Health Record, EHR Systems). Στα συστήματα αυτά ο ιατρός έχει στην διάθεση του όλο το ιστορικό του ασθενούς, τα αποτελέσματα των εξετάσεων του και τα χρησιμοποιεί για να βοηθηθεί στην επιλογή της κατάλληλης δραστικής ουσίας. Οι συναγερμοί ασφαλείας στην περίπτωση αυτή είναι πιο εξειδικευμένοι και ακριβείς.  
+
+		\end{itemize}
+		
+
+		Συνοπτικά τα συστατικά της ηλεκτρονικής συνταγογράφησης μπορούν να κατηγοριοποιηθούν σε βασικές δυνατότητες συνταγογράφησης, πληροφορίες για το πλάνο υγείας και τις κλινικές ειδοποιήσεις (clinical alerts).  Οι δυνατότητες συνταγογράφησης περιλαμβάνουν μια λίστα φαρμάκων, οδηγίες για τους ασθενείς, τον αριθμός των εγκεκριμένων ποσοτήτων, σχόλια του γιατρού που συνταγογραφεί προς τον φαρμακοποιό, καθώς και το πεδίο PRN. Οι πληροφορίες για το πλάνο υγείας του ασθενούς περιλαμβάνουν την ιατρική ασφάλεια που έχει και το ιστορικό των φαρμακευτικών αγωγών. Τέλος, οι κλινικές ειδοποιήσεις  βασίζονται στα δημογραφικά στοιχεία και στα στοιχεία του ιατρικού ιστορικού του ασθενούς και περιλαμβάνουν τις αντιδράσεις μεταξύ των φαρμάκων, τις αλλεργίες, τις προειδοποιήσεις για συγκεκριμένες ηλικιακές ομάδες και την κατάλληλη προσαρμογή της δόσης με βάση το βάρος του ασθενούς. \cite{prescribing} 
+		
+		
+		Τα βασικά συστατικά ενός συστήματος ηλεκτρονικής συνταγογράφησης είναι \cite{Grossman2012}:
+
+		\begin{itemize}
+
+		\item Ο παραπέμπων ιατρός. Ο θεράπων ιατρός είναι ο κύριος χρήστης  του συστήματος. Για την σύνδεση του στο σύστημα ακολουθείται μιας διαδικασία επαλήθευσης ώστε να επιβεβαιωθεί η ταυτότητά του. 
+Οι αναζητήσεις του θεράποντα ιατρού στην βάσης δεδομένων που περιέχει τους φακέλους των ασθενών πραγματοποιείται με τη χρήση ειδικών πληροφοριών για τον ασθενή, συνήθως το ΑΜΚΑ για Ελλάδα ή τον αριθμό κοινωνικής ασφάλισης (social security number) στον εξωτερικό. Μόλις προσπελαστεί το σωστό αρχείο του ασθενούς, ο ιατρός εξετάζει τις ιατρικές πληροφορίες που περιέχει και προσθέτει ή ενημερώνει μία συνταγή στον ιατρικό φάκελο.
+		
+		\item Ο κόμβος συναλλαγών. Αποτελεί τον κοινό σύνδεσμο μεταξύ όλων των φορέων (παραπέμπων ιατρός και φαρμακείο). Αποθηκεύει και διατηρεί ένα κύριο κατάλογο των ασθενών για να υπάρχει η δυνατότητα γρήγορης πρόσβασης στις ιατρικές πληροφορίες των ασθενών, καθώς και στην λίστα των φαρμακείων. Όταν ο παραπέμπων ιατρός ανεβάσει κάποια νέα συνταγή στον φάκελο του ασθενούς, τότε αυτή μεταφέρεται αυτόματα και στον κόμβο συναλλαγών. Ο κόμβος συναλλαγών θα στείλει αυτόματα τις πληροφορίες  με στο κεντρικό σύστημα διαχείρισης το οποίο θα απαντήσει με πληροφορίες σχετικά με την καταλληλότητα του ασθενή και το ιστορικό των φαρμακευτικών αγωγών του.  Ο κόμβος συναλλαγών έπειτα στέλνει τις πληροφορίες στον ιατρό έτσι ώστε να έχει τις απαραίτητες πληροφορίες που του χρειάζονται και να ολοκληρώσει και να εγκρίνει την συνταγή. 
+		
+		\item Το κεντρικό σύστημα διαχείρισης δεδομένων, στο οποίο βρίσκονται όλα τα στοιχεία ιατρικού φακέλου που ελέγχει την καταλληλότητα του ασθενή καθώς και της συνταγής. Το κεντρικό σύστημα διαχείρισης δεδομένων επικοινώνει με τον ιατρό και το φαρμακείο.
+		
+		\item Το φαρμακείο που έχει εγκατεστημένο το λογισμικό της ηλεκτρονικής συνταγογράφησης. Το φαρμακείο ανακτά την συνταγή από  το κεντρικό σύστημα διαχείρισης συναλλαγών μέσω του κόμβου συναλλαγών και έχει επιπλέον την ικανότητα να επικοινωνήσει με τον ιατρό και να τον ενημερώσει ότι η παραγγελία εκτελέστηκε. 
+		
+		\end{itemize}
+		
+		
+		
+		\subsubsection{Ηλεκτρονική Συνταγογράφηση στην Ελλάδα}
+		
+		Η ηλεκτρονική συνταγογράφηση στην Ελλάδα βασίζεται στις οδηγίες του νόμου 3892/2010 (ΦΕΚ 189 Α) «Ηλεκτρονική καταχώριση και εκτέλεση ιατρικών συνταγών και παραπεμπτικών ιατρικών εξετάσεων». Σε αυτόν το νόμο καταγράφονται τα ζητήματα ηλεκτρονικής συνταγογράφησης και τα ζητήματα των ηλεκτρονικών παραπεμπτικών.
+		
+		Ο υπεύθυνος φορέας στην Ελλάδα είναι η Γενική Γραμματεία Κοινωνικών Ασφαλίσεων του Υπουργείου Εργασίας, Κοινωνικής Ασφάλισης και Πρόνοιας. Το σύστημα υποστηρίζεται ηλεκτρονικά από την Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης (ΗΔΙΚΑ Α.Ε.). Η ΗΔΙΚΑ αποτελεί μια ανώνυμη, μη κερδοσκοπικού χαρακτήρα του δημοσίου την οποία αποζημιώνουν οι εξυπηρετούμενοι φορείς για τις υπηρεσίες του παρέχει, όπως για παράδειγμα το έργο μισθοδοσίας των φορέων.  \cite{idika}
+		
+%		Η ηλεκτρονική συνταγογράφηση ερμηνεύεται ως η παραγωγή, η διακίνηση και ο έλεγχος των ιατρικών συνταγών και των παραπεμπτικών για ιατρικές πράξεις, με τη χρήση τεχνολογίας ηλεκτρονικών υπολογιστών και επικοινωνιών, έτσι ώστε να διασφαλίζεται η ασφάλεια, η εγκυρότητα και η διαφάνεια στις πληροφορίες που διακινούνται. Όταν η εφαρμογή είναι στο πλήρες εύρος της, έχει τη δυνατότητα να υποστηρίξει ένα αριθμό από διαδικασίες που σχετίζονται με τη δημιουργία, την εκτέλεση, τη διαχείριση, τον έλεγχο, την εκκαθάριση και την εξόφληση μιας φαρμακευτικής συνταγής ή ενός παραπεμπτικού για ιατρικές πράξεις. Διέπει όλα τα συστήματα και τις τοποθεσίες που εμπλέκονται όπως τα τακτικά ιατρεία των νοσοκομείων ή τα ιδιωτικά ιατρεία, τα κέντρα υγείας, τις κλινικές, τα διαγνωστικά κέντρα, τα φαρμακεία και τα ασφαλιστικά ταμεία (Γενική Γραμματεία Κοινωνικών Ασφαλίσεων, 2013).
+
+
+%Η ηλεκτρονική συνταγογράφηση στην Ελλάδα αναπτύχθηκε για να εξυπηρετήσει διάφορους σκοπούς οι οποίοι μπορούν να συνοψισθούν στους παρακάτω (Γενική Γραμματεία Κοινωνικών Ασφαλίσεων, 2013):
+Αποτελεί μέσο για να εκσυγχρονισθεί το σύστημα φαρμακευτικής περίθαλψης
+• Βοηθά στην ταυτοποίηση και τον έλεγχο των εμπλεκομένων στη διασφάλιση της
+ευρείας και επιτυχούς επιχειρησιακής της λειτουργίας
+• Διευκολύνει στην εισαγωγή και αξιοποίηση των λειτουργιών της ηλεκτρονικής
+συνταγογράφησης στην καθημερινή πρακτική
+• Επιτυγχάνει τη δημιουργία ενός ευνοϊκού περιβάλλοντος λειτουργίας με
+διαφάνεια
+• Αναδεικνύει και αξιοποιεί τις υφιστάμενες και ή εν εξελίξει συναφείς δράσεις
+
+%Ο εκσυγχρονισμός του συστήματος φαρμακευτικής περίθαλψης και η προσπάθεια περιστολής των δαπανών για την ανακούφιση των ασφαλιστικών ταμείων από την υπερβάλλουσα δαπάνη είναι οι στόχοι που υπερτονίσθηκαν στην αιτιολόγηση έκθεση για το νόμο που εισήγαγε την ηλεκτρονική συνταγογράφηση στην Ελλάδα. Στα σχετικά πρακτικά του Ελληνικού Κοινοβουλίου αναφέρεται πως οι δαπάνες για φάρμακα και ιατρικές πράξεις αποτελούν κρίσιμες λειτουργίες των τομέων Υγείας και Κοινωνικής Ασφάλισης που επιδρούν στην υγεία των πολιτών αλλά και στα δημόσια οικονομικά. Γίνεται δηλαδή μια προσπάθεια ελέγχου της προκλητής ζήτησης, καθώς σύμφωνα με τις αναφορές των ασφαλιστικών ταμείων το έτος 2009 οι δαπάνες αυτές ανήλθαν στα 5 δισεκατομμύρια ευρώ, ενώ ένα μεγάλο ποσοστό αυτών (το 40%) ήταν κρατικά επιχορηγούμενη. Η επιτροπή υπονοεί ότι η αυξημένη αυτή δαπάνη ήταν εν μέρει προκλητή, στοχευμένη και παράνομη, ότι η χρήση εικονικών συνταγών είναι μια τακτική που χρησιμοποιείται και για το λόγο αυτό πρέπει να ελεγχθεί και να διακοπεί (Ελληνικό Κοινοβούλιο, 2010).
+
+%Το ύψος της φαρμακευτικής δαπάνης στη χώρα δεν είναι δικαιολογημένο, σύμφωνα με την έκθεση αφού στη Δανία για παράδειγμα, που έχει το μισό πληθυσμό από τη χώρα μας εκτελούνται 15 εκατομμύρια συνταγές ετησίως, ενώ στην Ελλάδα περίπου 100 εκατομμύρια.
+Τα οφέλη των ασθενών από την ηλεκτρονική συνταγογράφηση που αναφέρονται στην έκθεση είναι η προστασία των προσωπικών δεδομένων, η μείωση των λαθών, η αδυναμία «εκμετάλλευσης» των βιβλιαρίων τους από τους φαρμακοποιούς, η συνταγογράφηση μόνο από τους ιατρούς της συγκεκριμένης ειδικότητας και άλλα.
+Ένα σημαντικό όφελος για τα ασφαλιστικά ταμεία είναι η μείωση του κόστους διεκπεραίωσης των συνταγών. Αναφέρεται ότι η αποθήκευση των χειρόγραφων συνταγών ήταν κοπιαστική, οι έλεγχοι ήταν δειγματοληπτικοί, ενώ το κόστος διακίνησης μιας συνταγής είχε υπολογισθεί στα 2,3 Ευρώ με πολύ μεγαλύτερο κόστος όταν στη συνταγή γινόταν έλεγχος. Αυτά όλα τα χρήματα μπορούν να διασωθούν με την ηλεκτρονική συνταγογράφηση και να διατεθούν για τις ασφαλιστικές παροχές και τις συντάξεις των ασφαλισμένων.
+Η έκθεση ολοκληρώνεται αναφέροντας ότι με την ηλεκτρονική συνταγογράφηση επιτυγχάνεται η ποιότητα, εμπιστευτικότητα, ακεραιότητα και ασφάλεια των δεδομένων, ενώ ταυτόχρονα μπορούν να γίνουν διασταυρώσεις και επεξεργασία στοιχείων και πληροφοριών, οι οποίες μπορούν να αναβαθμίζονται διαρκώς (Ελληνικό Κοινοβούλιο, 2010).	
+	
+	
+	
 	\subsection{Ηλεκτρονικός Ιατρικός Φάκελος (HL7)}
+	
+	
+	
+	
+	
+	
+	
 	\subsection{epSOS}
 
 \section{Υλοποίηση}
