--- a/references.bib
+++ b/references.bib
@@ -410,6 +410,16 @@
   Timestamp                = {2015.10.11}
 }
 
+@Book{eprescr,
+  Title                    = {To Err Is Human:: Building a Safer Health System},
+  Author                   = {Committee on Quality of Health Care in America, Institute of Medicine},
+  Publisher                = {National Academies Press},
+  Year                     = {2000},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
+}
+
 @Article{condori,
   Title                    = {Community cloud computing},
   Author                   = {X. G. Condori},
@@ -532,6 +542,16 @@
   Url                      = {http://doi.acm.org/10.1145/2181037.2181040}
 }
 
+@Article{prescribingErrors,
+  Title                    = {Characterization of prescribing errors in an internal medicine clinic.},
+  Author                   = {Devine EB, Wilson-Norton JL, Lawless NM, Hansen RN, Hazlet TK, Kelly K, Hollingworth W, Blough DK, Sullivan SD.},
+  Journal                  = {Am J Health Syst Pharm},
+  Year                     = {2007 May},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
+}
+
 @Article{VOX:VOX5295,
   Title                    = {Blood Safety in the Developing World and WHO Initiatives},
   Author                   = {Dhingra, Dr Neelam},
@@ -555,8 +575,6 @@
   Number                   = {1},
   Pages                    = {23-42},
   Volume                   = {91},
-
-  __markedentry            = {[revekka:]},
   Doi                      = {10.1007/s00607-010-0106-z},
   ISSN                     = {0010-485X},
   Keywords                 = {Cloud computing; Dynamic VM creation; Shibboleth; PaaS; e-Learning; 68M14; 68M20},
@@ -792,6 +810,24 @@ Timothy Grance},
   Timestamp                = {2015.09.27}
 }
 
+@Article{Grossman2012,
+  Title                    = {Transmitting and processing electronic prescriptions: experiences of physician practices and pharmacies},
+  Author                   = {Grossman, Joy M and Cross, Dori A and Boukus, Ellyn R and Cohen, Genna R},
+  Journal                  = {Journal of the American Medical Informatics Association},
+  Year                     = {2012},
+  Number                   = {3},
+  Pages                    = {353--359},
+  Volume                   = {19},
+
+  __markedentry            = {[revekka:6]},
+  Abstract                 = {Objective A core feature of e-prescribing is the electronic exchange of prescription data between physician practices and pharmacies, which can potentially improve the efficiency of the prescribing process and reduce medication errors. Barriers to implementing this feature exist, but they are not well understood. This study{\textquoteright}s objectives were to explore recent physician practice and pharmacy experiences with electronic transmission of new prescriptions and renewals, and identify facilitators of and barriers to effective electronic transmission and pharmacy e-prescription processing.Design Qualitative analysis of 114 telephone interviews conducted with representatives from 97 organizations between February and September 2010, including 24 physician practices, 48 community pharmacies, and three mail-order pharmacies actively transmitting or receiving e-prescriptions via Surescripts.Results Practices and pharmacies generally were satisfied with electronic transmission of new prescriptions but reported that the electronic renewal process was used inconsistently, resulting in inefficient workarounds for both parties. Practice communications with mail-order pharmacies were less likely to be electronic than with community pharmacies because of underlying transmission network and computer system limitations. While e-prescribing reduced manual prescription entry, pharmacy staff frequently had to complete or edit certain fields, particularly drug name and patient instructions.Conclusions Electronic transmission of new prescriptions has matured. Changes in technical standards and system design and more targeted physician and pharmacy training may be needed to address barriers to e-renewals, mail-order pharmacy connectivity, and pharmacy processing of e-prescriptions.},
+  Doi                      = {10.1136/amiajnl-2011-000515},
+  ISSN                     = {1067-5027},
+  Owner                    = {revekka},
+  Publisher                = {The Oxford University Press},
+  Timestamp                = {2015.10.15}
+}
+
 @Article{Grossm2009,
   Title                    = {The Case for Cloud Computing},
   Author                   = {Robert L. Grossman},
@@ -975,6 +1011,25 @@ Timothy Grance},
   Url                      = {http://www.sciencedirect.com/science/article/pii/S0007681309001232}
 }
 
+@Article{Kart2008,
+  Title                    = {Building a Distributed E-Healthcare System Using SOA},
+  Author                   = {Kart, F. and Moser, L.E. and Melliar-Smith, P.M.},
+  Journal                  = {IT Professional},
+  Year                     = {2008},
+
+  Month                    = {March},
+  Number                   = {2},
+  Pages                    = {24-30},
+  Volume                   = {10},
+
+  __markedentry            = {[revekka:]},
+  Doi                      = {10.1109/MITP.2008.22},
+  ISSN                     = {1520-9202},
+  Keywords                 = {Web services;health care;patient monitoring;patient treatment;software architecture;telemedicine;SOA;Web services;distributed e-healthcare system;drug-delivery devices;electronic communication;medical monitoring devices;service-oriented architecture;Biomedical monitoring;Buildings;Medical services;Medical tests;Medical treatment;Patient monitoring;Performance evaluation;Semiconductor optical amplifiers;Service oriented architecture;System testing;Atom;RSS;SOA;Web services;e-healthcare;e-prescription;electronic health record;healthcare standards;interoperability;medical devices;service-oriented architecture;speech software},
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
+}
+
 @Article{Kaufm2009,
   Title                    = {Data Security in the World of Cloud Computing},
   Author                   = {Lori M. Kaufman},
@@ -990,6 +1045,24 @@ Timothy Grance},
   Owner                    = {revekka},
   Publisher                = {IEEE Computer Society},
   Timestamp                = {2015.10.13}
+}
+
+@Article{Kierkegaard2013,
+  Title                    = {E-Prescription across Europe},
+  Author                   = {Kierkegaard, Patrick},
+  Journal                  = {Health and Technology},
+  Year                     = {2013},
+  Number                   = {3},
+  Pages                    = {205-219},
+  Volume                   = {3},
+  Doi                      = {10.1007/s12553-012-0037-0},
+  ISSN                     = {2190-7188},
+  Keywords                 = {E-Prescription; E-health; Health portal; Cross border; Privacy; Data protection; Security},
+  Language                 = {English},
+  Owner                    = {revekka},
+  Publisher                = {Springer Berlin Heidelberg},
+  Timestamp                = {2015.10.15},
+  Url                      = {http://dx.doi.org/10.1007/s12553-012-0037-0}
 }
 
 @Book{kim1990introduction,
@@ -1520,8 +1593,6 @@ URN: urn:nbn:de:0114-fqs0501297},
   Number                   = {6},
   Pages                    = {80-83},
   Volume                   = {14},
-
-  __markedentry            = {[revekka:6]},
   Address                  = {Los Alamitos, CA, USA},
   Doi                      = {http://doi.ieeecomputersociety.org/10.1109/MIC.2010.145},
   ISSN                     = {1089-7801},
@@ -1762,11 +1833,28 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.13}
 }
 
+@Electronic{idika,
+  Title                    = {ΗΔΙΚΑ},
+  Url                      = {http://www.idika.gr/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
+}
+
 @Electronic{images,
   Title                    = {Cloud Models Images},
   Url                      = {http://www.techiestuffs.com/3-types-of-cloud-computing-services-for-businesses/},
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.12}
+}
+
+@Electronic{prescribing,
+  Title                    = {E-prescribing},
+  HowPublished             = {American College Of Rheumatology},
+  Url                      = {http://www.rheumatology.org/practice/office/hit/erx.asp},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
 }
 
