--- a/interoperability.tex
+++ b/interoperability.tex
@@ -1,3 +1,4 @@
+\graphicspath{ {Figures/interoperability/} }
 \chapter{Διασυνδεσιμότητα}\label{ch:Interoperability}
 \section{Απαιτήσεις}
 
@@ -9,6 +10,7 @@
 
 		
 \section{Δυνατότητες διασύνδεσης με άλλα υποσυστήματα}
+
 	\subsection{Ηλεκτρονική Συνταγογράφηση}
 	
 		Η διαδικασία της συνταγογράφησης φαρμάκων μπορεί να είναι ιδιαίτερα περίπλοκη και επιρρεπής σε λάθη, με
@@ -57,27 +59,47 @@
 		
 		Ο υπεύθυνος φορέας στην Ελλάδα είναι η Γενική Γραμματεία Κοινωνικών Ασφαλίσεων του Υπουργείου Εργασίας, Κοινωνικής Ασφάλισης και Πρόνοιας. Το σύστημα υποστηρίζεται ηλεκτρονικά από την Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης (ΗΔΙΚΑ Α.Ε.). Η ΗΔΙΚΑ αποτελεί μια ανώνυμη, μη κερδοσκοπικού χαρακτήρα του δημοσίου την οποία αποζημιώνουν οι εξυπηρετούμενοι φορείς για τις υπηρεσίες του παρέχει, όπως για παράδειγμα το έργο μισθοδοσίας των φορέων.  \cite{idika}
 		
-%		Η ηλεκτρονική συνταγογράφηση ερμηνεύεται ως η παραγωγή, η διακίνηση και ο έλεγχος των ιατρικών συνταγών και των παραπεμπτικών για ιατρικές πράξεις, με τη χρήση τεχνολογίας ηλεκτρονικών υπολογιστών και επικοινωνιών, έτσι ώστε να διασφαλίζεται η ασφάλεια, η εγκυρότητα και η διαφάνεια στις πληροφορίες που διακινούνται. Όταν η εφαρμογή είναι στο πλήρες εύρος της, έχει τη δυνατότητα να υποστηρίξει ένα αριθμό από διαδικασίες που σχετίζονται με τη δημιουργία, την εκτέλεση, τη διαχείριση, τον έλεγχο, την εκκαθάριση και την εξόφληση μιας φαρμακευτικής συνταγής ή ενός παραπεμπτικού για ιατρικές πράξεις. Διέπει όλα τα συστήματα και τις τοποθεσίες που εμπλέκονται όπως τα τακτικά ιατρεία των νοσοκομείων ή τα ιδιωτικά ιατρεία, τα κέντρα υγείας, τις κλινικές, τα διαγνωστικά κέντρα, τα φαρμακεία και τα ασφαλιστικά ταμεία (Γενική Γραμματεία Κοινωνικών Ασφαλίσεων, 2013).
+		Με τον όρο ηλεκτρονική συνταγογράφηση αναφερόμαστε στη παραγωγή, στην διακίνηση και στον έλεγχο των ιατρικών συνταγών και των παραπεμπτικών για ιατρικές πράξεις, με τη χρήση τεχνολογίας ηλεκτρονικών υπολογιστών και επικοινωνιών, έτσι ώστε να διασφαλίζεται η ασφάλεια, η εγκυρότητα και η διαφάνεια στις πληροφορίες που διακινούνται. Ουσιαστικά, το σύστημα περιλαμβάνει ένα αριθμό από διαδικασίες που σχετίζονται με τη δημιουργία, την εκτέλεση, τη διαχείριση, τον έλεγχο, την εκκαθάριση και την εξόφληση μιας φαρμακευτικής συνταγής ή ενός παραπεμπτικού για ιατρικές πράξεις. Διέπει όλα τα συστήματα και τις τοποθεσίες που εμπλέκονται όπως τα τακτικά ιατρεία των νοσοκομείων ή τα ιδιωτικά ιατρεία, τα κέντρα υγείας, τις κλινικές, τα διαγνωστικά κέντρα, τα φαρμακεία και τα ασφαλιστικά ταμεία.
 
 
-%Η ηλεκτρονική συνταγογράφηση στην Ελλάδα αναπτύχθηκε για να εξυπηρετήσει διάφορους σκοπούς οι οποίοι μπορούν να συνοψισθούν στους παρακάτω (Γενική Γραμματεία Κοινωνικών Ασφαλίσεων, 2013):
-Αποτελεί μέσο για να εκσυγχρονισθεί το σύστημα φαρμακευτικής περίθαλψης
-• Βοηθά στην ταυτοποίηση και τον έλεγχο των εμπλεκομένων στη διασφάλιση της
-ευρείας και επιτυχούς επιχειρησιακής της λειτουργίας
-• Διευκολύνει στην εισαγωγή και αξιοποίηση των λειτουργιών της ηλεκτρονικής
-συνταγογράφησης στην καθημερινή πρακτική
-• Επιτυγχάνει τη δημιουργία ενός ευνοϊκού περιβάλλοντος λειτουργίας με
-διαφάνεια
-• Αναδεικνύει και αξιοποιεί τις υφιστάμενες και ή εν εξελίξει συναφείς δράσεις
+		
+		Το ολοκληρωμένο σύστημα ηλεκτρονικής συνταγογράφησης στην Ελλάδα εξυπηρετεί τους εξής σκοπούς:
+		
+		\begin{itemize}
 
-%Ο εκσυγχρονισμός του συστήματος φαρμακευτικής περίθαλψης και η προσπάθεια περιστολής των δαπανών για την ανακούφιση των ασφαλιστικών ταμείων από την υπερβάλλουσα δαπάνη είναι οι στόχοι που υπερτονίσθηκαν στην αιτιολόγηση έκθεση για το νόμο που εισήγαγε την ηλεκτρονική συνταγογράφηση στην Ελλάδα. Στα σχετικά πρακτικά του Ελληνικού Κοινοβουλίου αναφέρεται πως οι δαπάνες για φάρμακα και ιατρικές πράξεις αποτελούν κρίσιμες λειτουργίες των τομέων Υγείας και Κοινωνικής Ασφάλισης που επιδρούν στην υγεία των πολιτών αλλά και στα δημόσια οικονομικά. Γίνεται δηλαδή μια προσπάθεια ελέγχου της προκλητής ζήτησης, καθώς σύμφωνα με τις αναφορές των ασφαλιστικών ταμείων το έτος 2009 οι δαπάνες αυτές ανήλθαν στα 5 δισεκατομμύρια ευρώ, ενώ ένα μεγάλο ποσοστό αυτών (το 40%) ήταν κρατικά επιχορηγούμενη. Η επιτροπή υπονοεί ότι η αυξημένη αυτή δαπάνη ήταν εν μέρει προκλητή, στοχευμένη και παράνομη, ότι η χρήση εικονικών συνταγών είναι μια τακτική που χρησιμοποιείται και για το λόγο αυτό πρέπει να ελεγχθεί και να διακοπεί (Ελληνικό Κοινοβούλιο, 2010).
+		\item  Βοηθά στον αποτελεσματικό εκσυγχρονισμό του συστήματος της φαρμακευτικής περίθαλψης. Οι χειρόγραφες συνταγές έχουν αντικατασταθεί από τις ηλεκτρονικές και η διαδικασία έχει αυτοματοποιηθεί.
+		 
+		\item Συντελεί στην ταυτοποίηση και τον έλεγχο των εμπλεκομένων για να διασφαλίσει την ακεραιότητα της διαδικασίας και την ευρεία και επιτυχημένη επιχειρησιακή λειτουργία της ηλεκτρονικής συνταγογράφησης.
+		
+		\item Βελτιώνει την ασφάλεια και την ποιότητα της φροντίδας του ασθενούς. Με την αύξηση του όγκου των φαρμάκων και της πολυπλοκότητα των ιατρικών αναγκών των ασθενών, εφίσταται αυξημένος κίνδυνος σφαλμάτων και παρενεργειών. Η ηλεκτρονική συνταγογράφηση μπορεί να βελτιώσει την ασφάλεια και την ποιότητα της φροντίδας του ασθενούς και να μειώσει τον αριθμό των λαθών
+		
+		\item Εισάγει και αξιοποιεί τις λειτουργίες της ηλεκτρονικής συνταγογράφησης στην καθημερινή πρακτική.
 
-%Το ύψος της φαρμακευτικής δαπάνης στη χώρα δεν είναι δικαιολογημένο, σύμφωνα με την έκθεση αφού στη Δανία για παράδειγμα, που έχει το μισό πληθυσμό από τη χώρα μας εκτελούνται 15 εκατομμύρια συνταγές ετησίως, ενώ στην Ελλάδα περίπου 100 εκατομμύρια.
-Τα οφέλη των ασθενών από την ηλεκτρονική συνταγογράφηση που αναφέρονται στην έκθεση είναι η προστασία των προσωπικών δεδομένων, η μείωση των λαθών, η αδυναμία «εκμετάλλευσης» των βιβλιαρίων τους από τους φαρμακοποιούς, η συνταγογράφηση μόνο από τους ιατρούς της συγκεκριμένης ειδικότητας και άλλα.
-Ένα σημαντικό όφελος για τα ασφαλιστικά ταμεία είναι η μείωση του κόστους διεκπεραίωσης των συνταγών. Αναφέρεται ότι η αποθήκευση των χειρόγραφων συνταγών ήταν κοπιαστική, οι έλεγχοι ήταν δειγματοληπτικοί, ενώ το κόστος διακίνησης μιας συνταγής είχε υπολογισθεί στα 2,3 Ευρώ με πολύ μεγαλύτερο κόστος όταν στη συνταγή γινόταν έλεγχος. Αυτά όλα τα χρήματα μπορούν να διασωθούν με την ηλεκτρονική συνταγογράφηση και να διατεθούν για τις ασφαλιστικές παροχές και τις συντάξεις των ασφαλισμένων.
-Η έκθεση ολοκληρώνεται αναφέροντας ότι με την ηλεκτρονική συνταγογράφηση επιτυγχάνεται η ποιότητα, εμπιστευτικότητα, ακεραιότητα και ασφάλεια των δεδομένων, ενώ ταυτόχρονα μπορούν να γίνουν διασταυρώσεις και επεξεργασία στοιχείων και πληροφοριών, οι οποίες μπορούν να αναβαθμίζονται διαρκώς (Ελληνικό Κοινοβούλιο, 2010).	
+		\end{itemize}
+
+	\subsubsection{E-prescription }
 	
+		Το ελληνικό σύστημα ηλεκτρονικής συνταγογράφησης,  το επονομαζόμενο e-precription, καθιερώθηκε το 2013. Πλέον καλύπτει περισσότερο  από το 95\% του συνόλου των συνταγών που γράφονται . Το e-precription δημιουργήθηκε με σκοπό να παρέχει τις εξής λειτουργίες: την ηλεκτρονική καταχώρηση και διαχείριση των συνταγών, την ενίσχυση της γνώσης μέσω της δυνατότητας άμεσης πρόσβασης στις πληροφορίες των φαρμάκων, την υποστήριξη λήψης αποφάσεων καθώς βοηθά την επιλογή των φαρμάκων με διάφορες ειδοποιήσεις, την υποστήριξη κατά την διοίκηση, την δημιουργία ηλεκτρονικών συνδέσμων μεταξύ των νοσοκομείων και των φαρμακείων, τις βελτιώσεις στις ήδη υπάρχουσες εργασιακές διαδικασίες, και τέλος την ανάπτυξης μιας διαδρομή ελέγχου για το σύνολο της χρήσης των φαρμάκων.  \cite{miller}
+		
+		Το e-prescription πραγματοποιεί την ηλεκτρονική επεξεργασία των συνταγών για όλους τους ασθενείς, οι οποίοι είναι ασφαλισμένοι σε κάποιον από τους εθνικούς φορείς ασφαλίσεων.Το σύστημα εστιάζει ιδιαιτέρως στην βελτίωση της ασφάλειας των ασθενών, την καλύτερη αξιοποίηση των πόρων και στην διαλειτουργικότητα με άλλα εθνικά ή ευρωπαϊκά συστήματα. Είναι διαθέσιμο μέσω του διαδικτύου (internet) και αποτελεί ένα αυτόνομο ηλεκτρονικό σύστημα εισόδου στο οποίο κάθε υποβολή συνταγής είναι ασφαλής και αναγνωρίζεται από έναν μοναδικό αριθμό. Στο σχήμα \ref{fig:prescr} απεικονίζεται η συνολική δομή του συστήματος. \cite{pangalos}
+		
+		Ο θεράπων ιατρός δημιουργεί τις συνταγές οι οποίες αποθηκεύονται στην εθνική βάση του συστήματος e-prescription , η οποία βρίσκεται στην ΗΔΙΚΑ. \cite{idika}Όταν ένα φαρμακείο θέλει να εκτελέσει μία συνταγή την  "διαβάζει" από την κεντρική βάση. Οι πληροφορίες ου βρίσκονται στην βάση δεδομένων είναι διαθέσιμες (μέσω ασφαλούς on-line πρόσβασης, ή εξειδικευμένων περιοδικών αναφορών) σε όλα τα σχετικά και ενδιαφερόμενα μέρη (Οργανισμοί Ασφάλισης Υγείας, Υπουργείο Υγείας, εποπτικές αρχές, κλπ). Οι συνταγές που έχουν εκτελεστεί από τα φαρμακεία  ελέγχονται από τους οργανισμούς ασφάλισης, ενώ το σύστημα e-prescription χρησιμοποιείται για να διασταυρώνονται οι έλεγχοι. \cite{papala}
+
+	Η εφαρμογή του e-prescription είναι μία διαδικτυακή εφαρμογή. Στο σύστημα έχουν πρόσβαση μόνο εξουσιοδοτημένοι χρήστες (ιατροί, φαρμακοποιοί, κλπ), οι οποίοι αναγνωρίζονται και αποκτούν άδεια πρόσβασης μετα την χρήση κατάλληλων διαπιστευτηρίων. για χωροθέτηση και αδειοδότηση.
 	
+	Ο θεράπων ιατρός δημιουργεί συνταγές, οι οποίες παρέχουν όλες τις απαραίτητες πληροφορίες τόσο για τους ιατρικούς όσο και για τους διοικητικούς σκοπούς.  Στις πληροφορίες αυτές συμπεριλαμβάνεται ο αριθμός κοινωνικής ασφάλισης  του ασθενούς και του ιατρού , ο κωδικός της διάγνωσης (που κωδικοποιείται στο ICD-10), τα στοιχεία του καθορισμένου φαρμάκου (ποσότητα, δοσολογία, κ.λ.π.), το ποσοστό συμμετοχής του ασθενή στην πληρωμή του φαρμάκου και άλλα στοιχεία.  Αυτές οι πληροφορίες εκτός από την βοήθεια που προσφέρουν στους ιατρούς, συντελούν στην γνώση των λεπτομερειών της διαδικασίας συνταγογράφησης εύκολα και σε πραγματικό χρόνο. Η δυνατότητα αυτή καθιστά το e-prescription σύστημα ένα ισχυρό εργαλείο όχι μόνο για την ενίσχυση της παρακολούθησης της δημόσιας υγείας και τον σχεδιασμό της, αλλά και για την βελτίωση του διοικητικού έλεγχου
+και τη διαφάνεια των δαπανών των φαρμάκων. Τέλος, το σύστημα e-prescription παρέχει στους ασθενείς την δυνατότητα να  επιλέξουν, το φάρμακο που επιθυμούν ή μπορούν να αντεπεξέλθουν οικονομικά από μια λίστα ισοδυνάμων φαρμάκων στην οποία, συμπεριλαμβάνονται και τα γενόσημα φάρμακα. 
+
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{e-prescr.png}
+	    \caption{Το σύστημα E-prescription στην Ελλάδα. }
+	    \label{fig:prescr}
+	\end{figure}
+
+
+	
+
 	
 	\subsection{Ηλεκτρονικός Ιατρικός Φάκελος (HL7)}
 	
