--- a/references.bib
+++ b/references.bib
@@ -575,6 +575,7 @@
   Number                   = {1},
   Pages                    = {23-42},
   Volume                   = {91},
+
   Doi                      = {10.1007/s00607-010-0106-z},
   ISSN                     = {0010-485X},
   Keywords                 = {Cloud computing; Dynamic VM creation; Shibboleth; PaaS; e-Learning; 68M14; 68M20},
@@ -708,6 +709,16 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.09.14}
+}
+
+@Article{pangalos,
+  Title                    = {The New Greek National E-Prescription System: A Powerful Ehealth
+Tool for Improving Services to Citizens and Administrative Control},
+  Author                   = {G. Pangalos , D. Asimakopoulos},
+  Year                     = {2013},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
 }
 
 @Electronic{gartnerGamification,
@@ -948,6 +959,15 @@ Timothy Grance},
   Timestamp                = {2015.10.11}
 }
 
+@Electronic{idika,
+  Title                    = {IDIKA S.A.},
+  Author                   = {IDIKA},
+  Url                      = {http://www.idika.gr},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
+}
+
 @Article{BlohmIvo2013,
   Title                    = {Gamification - Design of IT-Based Enhancing Services for Motivational Support and Behavioral Change},
   Author                   = {Ivo Blohm, Jan Marco Leimeister},
@@ -1055,6 +1075,7 @@ Timothy Grance},
   Number                   = {3},
   Pages                    = {205-219},
   Volume                   = {3},
+
   Doi                      = {10.1007/s12553-012-0037-0},
   ISSN                     = {2190-7188},
   Keywords                 = {E-Prescription; E-health; Health portal; Cross border; Privacy; Data protection; Security},
@@ -1269,6 +1290,15 @@ Timothy Grance},
   Timestamp                = {2015.10.14}
 }
 
+@Article{miller,
+  Title                    = {Clinical decision support and electronic prescribing systems: a time for responsible thought and action},
+  Author                   = {Miller RA1, Gardner RM, Johnson KB, Hripcsak G.},
+  Year                     = {2005 Jul-Aug},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
+}
+
 @Article{Misje2005,
   Title                    = {Motivation, recruitment and retention of voluntary non-remunerated blood donors: a survey-based questionnaire study},
   Author                   = {Misje, A. H. and Bosnes, V. and G{\aa}sdal, O. and Heier, H. E.},
@@ -1348,6 +1378,18 @@ Timothy Grance},
   Bdsk-url-1               = {http://www.who.int/mediacentre/news/releases/2012/blood_donation_20120614/en/},
   Owner                    = {ilias},
   Timestamp                = {2015.09.14}
+}
+
+@Article{papala,
+  Title                    = {The new Greek national e-Prescription system: a framework for a more
+productive and effective implementation},
+  Author                   = {I. Papala},
+  Journal                  = {National School of public administration,
+Division of health economics, Athens},
+  Year                     = {2012},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
 }
 
 @InProceedings{Peng2009,
@@ -1593,6 +1635,7 @@ URN: urn:nbn:de:0114-fqs0501297},
   Number                   = {6},
   Pages                    = {80-83},
   Volume                   = {14},
+
   Address                  = {Los Alamitos, CA, USA},
   Doi                      = {http://doi.ieeecomputersociety.org/10.1109/MIC.2010.145},
   ISSN                     = {1089-7801},
